--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,30 +122,36 @@ include_directories(include
 # add_library(uav_commander
 #   src/${PROJECT_NAME}/uav_commander.cpp
 # )
+add_library(lib1
+  src/Teleop_UAV.cpp
+)
 
 ## Declare a cpp executable
 #add_executable(position_controller src/uav_commander.cpp)
 add_executable(position_controller src/PositionControl.cpp)
 add_executable(position_controller_Fe src/PositionControl_Fe.cpp)
 add_executable(chirp_goal_commander src/ChirpGoalCommander.cpp)
-add_executable(go_server src/GoServer.cpp)
-add_executable(go_client src/GoClient.cpp)
+#add_executable(go_server src/GoServer.cpp)
+#add_executable(go_client src/GoClient.cpp)
 add_executable(chirp_controler src/ChirpAndControl.cpp)
 add_executable(adaptive_control src/AdaptiveX.cpp)
 add_executable(way_point_client src/WayPointClient.cpp)
+add_executable(test1 src/Test.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 #add_dependencies(position_controller uav_commander_generate_messages_cpp)
 add_dependencies(position_controller uav_commander_generate_messages_cpp ${PROJECT_NAME}_gencfg)
 add_dependencies(position_controller_Fe ${PROJECT_NAME}_gencfg)
+#add_dependencies(go_server ${PROJECT_NAME}_gencfg)
+#add_dependencies(go_client ${PROJECT_NAME}_gencfg)
 add_dependencies(chirp_goal_commander uav_commander_generate_messages_cpp)
 add_dependencies(chirp_controler uav_commander_generate_messages_cpp)
 add_dependencies(adaptive_control uav_commander_generate_messages_cpp)
 add_dependencies(way_point_client uav_commander_generate_messages_cpp)
+add_dependencies(test1 uav_commander_generate_messages_cpp)
 
-add_dependencies(go_server ${PROJECT_NAME}_gencfg)
-add_dependencies(go_client ${PROJECT_NAME}_gencfg)
+
 
 ## Specify libraries to link a library or executable target against
 #target_link_libraries(position_controller ${catkin_LIBRARIES} -lpq )
@@ -154,9 +160,10 @@ target_link_libraries(position_controller_Fe  ${catkin_LIBRARIES} -lpq )
 target_link_libraries(chirp_goal_commander ${catkin_LIBRARIES} -lpq )
 target_link_libraries(chirp_controler ${catkin_LIBRARIES} -lpq )
 target_link_libraries(adaptive_control ${catkin_LIBRARIES} -lpq )
-target_link_libraries(go_server ${catkin_LIBRARIES} -lpq )
-target_link_libraries(go_client ${catkin_LIBRARIES} -lpq )
+#target_link_libraries(go_server ${catkin_LIBRARIES} -lpq )
+#target_link_libraries(go_client ${catkin_LIBRARIES} -lpq )
 target_link_libraries(way_point_client ${catkin_LIBRARIES} -lpq )
+target_link_libraries(test1 lib1 ${catkin_LIBRARIES} -lpq )
 
 #############
 ## Install ##
